# raytracer

./: .gitignore  CMakeLists.txt  README.md
includes/: color.h  hittable_list.h  interval.h  material.h  ray.h  raytracer.h  sphere.h  surface.h  surface_list.h  vec3.h  viewport.h
src/: main.cpp
